# dicom-legacy-converter

./: .gitignore  README.md  pyproject.toml
src/dicom_legacy_converter/: __init__.py  cli.py  convert.py
tests/: test_convert.py
